// Vitest Snapshot v1

exports[`PasswordInput > If component renders correctly 1`] = `
VueWrapper {
  "__app": {
    "_component": [Object],
    "_container": <div … />,
    "_context": [Object],
    "_instance": [Object],
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": [Object],
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.37",
  },
  "__setProps": [Function],
  "componentVM": {
    "customTextPasswordInput": "Mostrar",
    "disabled": false,
    "errorMessage": "Valor inválido",
    "errorState": false,
    "fluid": false,
    "handleShowPassword": [Function],
    "hasOwnProperty": [Function],
    "hasSlots": false,
    "inputClass": "password-input__field",
    "internalValue": "",
    "isBeingFocused": false,
    "label": "Label",
    "labelDynamicClass": "password-input__label",
    "linkText": null,
    "linkTextState": false,
    "linkUrl": "https://cuida.framer.wiki/",
    "modelValue": "",
    "placeholder": "Digite aqui a informação",
    "required": false,
    "showPassword": false,
    "state": "default",
    "stepperInputDynamicClass": "password-input",
    "tooltip": null,
    "tooltipIcon": "info-outline",
  },
  "isDisabled": [Function],
  "rootVM": {},
  "wrapperElement": <div
    data-v-41502f2c=""
  >
    <span … />
    <div … />
    <!--v-if-->
  </div>,
}
`;

exports[`PasswordInput > If component renders correctly 2`] = `
VueWrapper {
  "__app": {
    "_component": [Object],
    "_container": <div … />,
    "_context": [Object],
    "_instance": [Object],
    "_props": null,
    "_uid": 1,
    "component": [Function],
    "config": [Object],
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.37",
  },
  "__setProps": [Function],
  "componentVM": {
    "customTextPasswordInput": "Mostrar",
    "disabled": false,
    "errorMessage": "Valor inválido",
    "errorState": false,
    "fluid": false,
    "handleShowPassword": [Function],
    "hasOwnProperty": [Function],
    "hasSlots": false,
    "inputClass": "password-input__field",
    "internalValue": "",
    "isBeingFocused": false,
    "label": "Label",
    "labelDynamicClass": "password-input__label",
    "linkText": null,
    "linkTextState": false,
    "linkUrl": "https://cuida.framer.wiki/",
    "modelValue": "",
    "placeholder": "Digite aqui a informação",
    "required": false,
    "showPassword": false,
    "state": "default",
    "stepperInputDynamicClass": "password-input",
    "tooltip": null,
    "tooltipIcon": "info-outline",
  },
  "isDisabled": [Function],
  "rootVM": {},
  "wrapperElement": <div
    data-v-41502f2c=""
  >
    <span … />
    <div … />
    <!--v-if-->
  </div>,
}
`;

exports[`PasswordInput > renders correctly 1`] = `
VueWrapper {
  "__app": {
    "_component": [Object],
    "_container": <div … />,
    "_context": [Object],
    "_instance": [Object],
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": [Object],
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.2.37",
  },
  "__setProps": [Function],
  "componentVM": {
    "customTextPasswordInput": "Mostrar",
    "disabled": false,
    "errorMessage": "Valor inválido",
    "errorState": false,
    "fluid": false,
    "handleShowPassword": [Function],
    "hasOwnProperty": [Function],
    "hasSlots": false,
    "inputClass": "password-input__field",
    "internalValue": "",
    "isBeingFocused": false,
    "label": "Label",
    "labelDynamicClass": "password-input__label",
    "linkText": null,
    "linkTextState": false,
    "linkUrl": "https://cuida.framer.wiki/",
    "modelValue": "",
    "placeholder": "Digite aqui a informação",
    "required": false,
    "showPassword": false,
    "state": "default",
    "stepperInputDynamicClass": "password-input",
    "tooltip": null,
    "tooltipIcon": "info-outline",
  },
  "isDisabled": [Function],
  "rootVM": {},
  "wrapperElement": <div
    data-v-41502f2c=""
  >
    <span … />
    <div … />
    <!--v-if-->
  </div>,
}
`;
